update migration and seedesr
